--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: yuwang yuwang@wiscom.com.cn
  * @Date: 2023-06-14 10:23:52
  * @LastEditors: yuwang yuwang@wiscom.com.cn
- * @LastEditTime: 2023-06-14 14:35:43
+ * @LastEditTime: 2024-04-17 15:14:26
  * @FilePath: \control\index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -14,7 +14,7 @@
   </head>
   
   <body>
-        <a href='itms-services://?action=download-manifest&url=https://hs.wuchenxi.xyz:6819/ftp/controlerPanel/ios/wiscom.plist'>安装大屏控制</a>
+        <a href='itms-services://?action=download-manifest&url=https://github.com/wumeixia/installDemoApp/blob/main/manifest.plist'>安装大屏控制</a>
         <!-- <a href='itms-services://?action=download-wiscom&url=https://hs.wuchenxi.xyz:6819/ftp/controlerPanel/ios/wiscom.plist'>安装大屏控制</a> -->
   </body>
 </html>
